--- a/Frontend_IMA/index.html
+++ b/Frontend_IMA/index.html
@@ -1,10 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="../Frontend_IMA/src/assets/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="../Frontend_IMA/src/assets/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="../Frontend_IMA/src/assets/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Invoice Management Application</title>
   </head>
   <body>
     <div id="root"></div>
