--- a/Frontend_IMA/index.html
+++ b/Frontend_IMA/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="apple-touch-icon" sizes="180x180" href="../Frontend_IMA/src/assets/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="../Frontend_IMA/src/assets/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="../Frontend_IMA/src/assets/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Invoice Management Application</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="./src/assets/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./src/assets/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/favicon-16x16.png" />
+    <link rel="manifest" href="./src/assets/site.webmanifest" />
+    <title>TBC Invoice Manager</title>
   </head>
   <body>
     <div id="root"></div>
